Changes in @NEW@
===============
Bug Fixes
---------------------
* the mirror-outbound script now uses rBuilder's internal conary proxy 
  (RBA-4845)

Changes in 5.1.0
===============
Web Front End Changes
---------------------
* There are now fewer wizard plugins, however the plugins themselves
  are still there.  (RBL-4186)
* The Next Steps plugin has been removed.  (RBL-4186)
* The rBA Setup plugin now informs users how to login and redirects them
* Group builder via the old UI is no longer supported. (RBL-4554)

Bug Fixes
---------------------
* Under conditions of high load, rBuilder would occasionally traceback
  upon reading a partially-written conaryrc file. This has been
  corrected. (RBL-4212)
* Products are created as private by default now. (RBL-4188)
* Removed description, home page, commits email, and namespace options
  from "Create Product" page.  (RBL-4188)
* "Is Appliance" field on "Create Product" page is now an advanced option.
  (RBL-4188)
* There are now fewer wizard plugins, however the plugins themselves
  are still there.  (RBL-4186)
* The Next Steps plugin has been removed.  (RBL-4186)
* The rBA Setup plugin now informs users how to login and redirects them
  to the rBuilder. (RBL-4186)
* The "Create Product" page has been re-designed. (RBL-4188)
* rPA now contains an icons/link to access the rBuilder. (RBL-4179)
* There is now an option to delete a product from the product homepage.
  (RBL-4175).

Internal Changes
---------------------
* processEditVersion now filters out empty string and None values from the
  image settings when creating image definitions in the product definition.
  (RBL-4281)
* Moved to using one repository role per level (owner, admin, user, developer)
  instead of one role per user. (RBL-2721)
  

Changes in 5.0.1
===============

Bug Fixes
---------------------
* Downloads of images larger than 2GiB are no longer sent with a
  trailing HTML fragment that caused checksum failures on some Windows