@@ -350,11 +350,6 @@ class Database(DBInterface):
             if getattr(product, attr) is None:
                 setattr(product, attr, '')
 
-        if product.prodtype == 'Appliance':
-            applianceValue = 1
-        else:
-            applianceValue = 0
-
         if self.cfg.hideNewProjects:
             product.hidden = True
         elif product.hidden is None:
@@ -363,7 +358,7 @@ class Database(DBInterface):
         productId = self.productMgr.createProduct(product.name, 
                                       product.description, product.hostname,
                                       product.domainname, product.namespace,
-                                      applianceValue, product.projecturl,
+                                      product.projecturl,
                                       product.shortname, product.prodtype,
                                       product.version,
                                       product.commitEmail, 
